# ips-backend/src/main/java/iamus/ips/rest/LogRest.java
@@ -2,6 +2,7 @@ package iamus.ips.rest;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -10,6 +11,7 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import iamus.ips.jpa.entity.BeaconEntity;
 import iamus.ips.jpa.entity.LogEntity;
 import iamus.ips.jpa.repository.LogRepository;
 import io.swagger.annotations.ApiParam;
@@ -18,7 +20,7 @@ import iamus.ips.server.model.Log;
 
 @RestController
 @RequestMapping("/api")
-@CrossOrigin(origins="http://localhost:4200", allowedHeaders="*")
+@CrossOrigin(origins = "http://localhost:4200", allowedHeaders = "*")
 public class LogRest implements LogApi {
 
 	@Autowired
@@ -39,27 +41,27 @@ public class LogRest implements LogApi {
 	}
 
 	@Override
-	public ResponseEntity<Log> getLogByObjectId(@ApiParam(value = "Numeric ID of the object to get log data.", //
-			required = true) @PathVariable("objectID ") String objectID) {
-
-		LogEntity optional = logRepository.findOneByObjectId(objectID);
-		if (optional != null) {
-			return ResponseEntity.ok(toLog(optional));
-		} else {
-			return ResponseEntity.notFound().build();
+	public ResponseEntity<List<Log>> getLogByObjectId(@ApiParam(value = "Numeric ID of the object to get log data.", //
+			required = true) @PathVariable("id") Long id) {
+		final List<Log> list = new ArrayList<>();
+		System.out.println(list);
+		for (final LogEntity src : logRepository.findLogsByObjectId(id)) {
+			list.add(toLog(src));
 		}
+		System.out.println(list);
+		return Utils.toResponseEntity(list);
 	}
 
 	@Override
-	public ResponseEntity<Log> getLogByPlanId(@ApiParam(value = "Numeric ID of the plan to get log data.", //
-			required = true) @PathVariable("planId ") String planId) {
-
-		LogEntity optional = logRepository.findOneByPlanId(planId);
-		if (optional != null) {
-			return ResponseEntity.ok(toLog(optional));
-		} else {
-			return ResponseEntity.notFound().build();
+	public ResponseEntity<List<Log>> getLogByPlanId(@ApiParam(value = "Numeric ID of the plan to get log data.", //
+			required = true) @PathVariable("id") Long id) {
+		final List<Log> list = new ArrayList<>();
+		System.out.println(list);
+		for (final LogEntity src : logRepository.findLogsByPlanId(id)) {
+			list.add(toLog(src));
 		}
+		System.out.println(list);
+		return Utils.toResponseEntity(list);
 	}
 
 	private static Log toLog(LogEntity src) {
@@ -75,5 +77,6 @@ public class LogRest implements LogApi {
 		tgt.setObjectType(src.getObject().getObjType());
 		return tgt;
 	}
+
 
 }
